# RISCV

./: CMakeLists.txt
include/: alu.hpp  communication.hpp  controller.hpp  datapool.hpp  instruction_memory.hpp  main_memory.hpp  register_file.hpp  signal.hpp
src/: alu.cpp  controller.cpp  instruction_memory.cpp  main_memory.cpp  register_file.cpp  signal.cpp
tests/: test.cpp
